test/classes/errors/nilability-assign/assign-oknil-unmanaged-from-nonnil-borrowed.good
assign-oknil-unmanaged-from-nonnil-borrowed.chpl:8: error: Cannot assign to unmanaged MyClass? from borrowed MyClass
